--- a/20220811_homework_TsunganFu/20220811_homework.html
+++ b/20220811_homework_TsunganFu/20220811_homework.html
@@ -1,4 +1,3 @@
-
 <html>
 <head>
 	<meta charset="utf-8">
@@ -31,19 +30,21 @@
 			<div id='left'>
 				<div id="left-top"> 
 					<p>#堅哥的忍辱???退選</p>
+					<div id="left-top-news">
 				    <ul>
 					<li><a href="https://www.ettoday.net/news/20220812/2315190.htm">林智堅發表聲明退選承認個人努力不夠、寫作有瑕疵</a></li>
 					<li><a href="https://newtalk.tw/news/view/2022-08-12/800799">退選能證明被抹黑迫害？ 林濁水：背傳統之道「可惜了」</a></li>
 					<li><a href="https://www.appledaily.com.tw/politics/20220812/76B4785E725DFDFD2698A83255">林智堅宣布退選！鄭運鵬選桃園市長</a></li>
 					<li><a href="https://times.hinet.net/news/24076814">林智堅退選 侯友宜：尊重學術自由</a></li>
 				    </ul>
+                    </div>
 				</div>
 
 				<div id="left-down"> 
 					<p>#維護學術自由的聲音!!!</p>
 				    <div> <img src="img/news3.jpg"> </div>
 
-				    <div id="left-down-text">
+				    <div id="left-down-news">
 				    <ul>
 					<li><a href="https://newtalk.tw/news/view/2022-08-15/801913">林濁水再議論文門風波：黨的決策能力和品質「差到無以復加」</a></li>
 					<li><a href="https://www.storm.mg/article/4464812">民進黨控台大突襲林智堅 黃國昌揭關鍵怒批：可以胡說八道嗎？</a></li>
