--- a/20220811_homework_TsunganFu/20220811_homework.html
+++ b/20220811_homework_TsunganFu/20220811_homework.html
@@ -4,6 +4,8 @@
 	<title>選戰新聞</title>
 	<link href="css/20220811_homework.css "rel="stylesheet">
 </head>
+
+   <body>
 		<div id="banner">		
 			<div id='logo'> 
 				<a href="https://www.lccnet.com.tw/" target="_blank"><img src="img/logo.png"> 
