--- a/20220901_homework_TsunganFu/20220901_homework.html
+++ b/20220901_homework_TsunganFu/20220901_homework.html
@@ -8,9 +8,15 @@
 
   <style>
 
-    #logo{ width:100%; height:70px; background-color:#ffffff; }
+   body{
+   margin:0 auto; /* 沒有外距 */
+   height:100%;
+   
+   }
 
-    .logo_info{ height:70px; float:left; margin:1px;margin-left:10%; }
+    #logo1{ width:100%; height:70px; background-color:#ffffff; }
+
+    .logo1_info{ height:70px; float:left; margin:1px;margin-left:10%; }
 
     #menu{ width:100%; height:40px; background-color:#0047AB; }
 
@@ -60,14 +66,28 @@
     #content1-right-center{ width:295px;min-height:167px;background-color:#000000;float:left;}
     #content1-right-down{ width:295px;min-height:167px;background-color:#000000;float:left;}
 
+    #logo2{ width:100%; min-height:140px;background-color:#F5F5F5;position: relative; top:40px; }
+    #logo2-1{ width:25.5%; border:1px dashed #ffffff; height: 120px;float:left;margin:10px;margin-left:-890px; }
+    #logo2-2{ width:25.5%; border:1px dashed #ffffff; height: 120px;float:left;margin:10px;margin-left:-485px; }
+    #logo2-2 span{
+      font-size: 40px;
+      margin-left: 100px;
+    }
+    #logo2-3{ width:25.5%; border:1px dashed #ffffff; height: 50px;float:left;margin:10px;margin-left:-80px;margin-top:70px; }
+    #content2{ width: 100%; min-height:420px; position: relative; top:40px;}
+    #content2-left{ width:26%; border:1px dashed #ffffff; height: 280px;float:left;margin:5px;margin-left:-890px;}
+    #content2 img{width: 99%;}
+    #content2-center{ width:26%; border:1px dashed #ffffff; height: 300px;float:left;margin:5px;margin-left:-480px;}
+    #content2-right{ width:25%; border:1px dashed #ffffff; height: 375px;float:left;margin:5px;margin-left:-70px;}
    
    /* * 意思 是說 裡面html 的標籤都適用 */
    /* 輪播圖片style */
-   *{
-         margin:0px;
-         list-style: none;
-        padding:0px;
-      }
+   
+    *{
+     list-style: none; 
+     margin:0px; 
+     padding:0px;
+    }
       .banner{
          width:889px;
          height:500px;
@@ -202,8 +222,8 @@
 </head>
 
 <body>
-   <div id="logo">
-      <div class="logo_info">
+   <div id="logo1">
+      <div class="logo1_info">
          <a href="https://www.samsung.com/tw/" target="_blank"><img src="img/samsung.jpg"></a>
       </div>
    </div>
@@ -294,7 +314,54 @@
             <div style="border:2px write solid;width:220px;margin-top:-50px;margin-left:30px;"><b><font color="blue">【圖表解析】Galaxy Z Flip4：終極自我表達工具</font></b></div>
          </div>   
       </div>
+   </div>
 
+   <div id="logo2">
+      <div id="logo2-1">
+         <div style="border:2px #ffffff solid;width:220px;margin-top:80px;"><a href="https://www.cwb.gov.tw/V8/C/" target="_blank"><em>今日天氣:交通部中央氣象局</em></a></div>
+      </div>
+      <div id="logo2-2"><span><u>三星 News</u></span></div>
+
+      <div id="logo2-3">
+         <p>追蹤我們:</p>
+         <img src="img/icon-fb-samsung.jpg">
+         <img src="img/icon-ig-samsung.jpg">
+         <img src="img/icon-line-samsung.jpg">
+         <img src="img/icon-twiiter-samsung.jpg">
+         <img src="img/icon-youtube-samsung.jpg">
+      </div>
+   </div>
+
+   <div id="content2">
+      <div id="content2-left">
+         <a href="https://news.samsung.com/tw/%e4%b8%89%e6%98%9f%e6%9c%80%e8%a6%aa%e6%b0%915g%e6%96%b0%e6%a9%9f%ef%bc%81galaxy-m33-5g%e8%b6%85%e8%a6%8f%e8%b6%85%e5%80%bc%e9%87%8d%e7%a3%85%e4%b8%8a%e5%a0%b4" target="_blank"><img src="img/samsung news-1.jpg"</a>
+          <a href="https://news.samsung.com/tw/%e4%b8%89%e6%98%9f%e6%9c%80%e8%a6%aa%e6%b0%915g%e6%96%b0%e6%a9%9f%ef%bc%81galaxy-m33-5g%e8%b6%85%e8%a6%8f%e8%b6%85%e5%80%bc%e9%87%8d%e7%a3%85%e4%b8%8a%e5%a0%b4" target="_blank"><p>[新聞稿]<br>三星最親民5G新機！Galaxy M33 5G超規超值重磅上場</p></a>
+      </div>
+      <div id="content2-center">
+         <a href="https://news.samsung.com/tw/%e5%85%a8%e7%90%83%e9%a6%96%e6%ac%be55%e5%90%8b1000r%e8%b6%85%e5%a4%a7%e6%9b%b2%e9%9d%a2%e9%a1%af%e7%a4%ba%e5%99%a8-%e5%a5%a7%e5%be%b7%e8%b3%bdodyssey-ark%e5%88%b6%e9%9c%b8%e5%85%a8%e5%8f%b0%e9%9b%bb" target="_blank"><img src="img/samsung news-2.jpg"</a>
+          <a href="https://news.samsung.com/tw/%e5%85%a8%e7%90%83%e9%a6%96%e6%ac%be55%e5%90%8b1000r%e8%b6%85%e5%a4%a7%e6%9b%b2%e9%9d%a2%e9%a1%af%e7%a4%ba%e5%99%a8-%e5%a5%a7%e5%be%b7%e8%b3%bdodyssey-ark%e5%88%b6%e9%9c%b8%e5%85%a8%e5%8f%b0%e9%9b%bb" target="_blank"><p>[新聞稿]<br>全球首款55吋1000R超大曲面顯示器 奧德賽Odyssey Ark制霸全台電競戰場</p></a>
+      </div>
+      <div id="content2-right">
+         <a href="https://news.samsung.com/tw/%e4%b8%89%e6%98%9f%e9%9b%bb%e5%ad%90%e6%96%bc2022%e5%b9%b4%e5%bf%ab%e9%96%83%e8%a8%98%e6%86%b6%e9%ab%94%e9%ab%98%e5%b3%b0%e6%9c%83%e7%99%bc%e8%a1%a8%e6%96%b0%e4%b8%96%e4%bb%a3%e8%a7%a3%e6%b1%ba" target="_blank"><p>[新聞稿]三星電子於2022年快閃記憶體高峰會發表新...</p></a>
+         <br>
+         <br>
+         <a href="https://news.samsung.com/tw/%e3%80%8cpro%e3%80%8d%e7%b4%9a%e7%a9%bf%e6%88%b4%e7%94%9f%e6%85%8b%e5%9c%88%ef%bc%81galaxy-watch5%e7%b3%bb%e5%88%97%e3%80%81buds2-pro%e7%99%bb%e5%8f%b0" target="_blank"><p>[新聞稿]「Pro」級穿戴生態圈！Galaxy Watch5系列....</p></a>
+         <br>
+         <br>
+         <a href="https://news.samsung.com/tw/%e3%80%90%e4%b8%89%e6%98%9f%e6%96%b0%e8%81%9e%e7%a8%bf%e7%99%bc%e5%b8%83%e3%80%91samsung-galaxy%e6%91%ba%e7%96%8a%e6%96%b0%e6%97%97%e8%89%a6%e5%89%b5%e9%80%a0%e7%99%be%e8%ae%8a%e8%a1%8c%e5%8b%95" target="_blank"><p>[新聞稿]Samsung Galaxy摺疊新旗艦創造百變行動體....</p></a>
+         <br>
+         <br>
+         <a href="https://news.samsung.com/tw/galaxy-watch%e8%a1%80%e5%a3%93%e7%9b%a3%e6%b8%ac%e5%8a%9f%e8%83%bd-%e7%82%ba%e5%b8%95%e9%87%91%e6%a3%ae%e6%b0%8f%e7%97%87%e6%82%a3%e8%80%85%e5%ae%88%e8%ad%b7%e5%81%a5%e5%ba%b7" target="_blank"><p>[新聞稿]Galaxy Watch血壓監測功能 為帕金森氏症患....</p></a>
+         <br>
+         <br>
+         <a href="https://news.samsung.com/tw/galaxy-s22-ultra%e5%86%8d%e7%8f%bemillie-bobby-brown%e9%bc%93%e8%88%9e%e4%ba%ba%e5%bf%83%e7%9a%84%e6%88%90%e9%95%b7%e6%95%85%e4%ba%8b" target="_blank"><p>[新聞稿]Galaxy S22 Ultra再現Millie Bobby Brown鼓....</p></a>
+         <br>
+         <br>
+         <a href="https://news.samsung.com/tw/%e4%b8%89%e6%98%9flpddr5x-dram%e7%8d%b2%e9%ab%98%e9%80%9a%e9%a9%97%e8%ad%89-%e8%83%bd%e6%87%89%e7%94%a8%e6%96%bcsnapdragon%e8%a1%8c%e5%8b%95%e5%b9%b3%e5%8f%b0" target="_blank"><p>[新聞稿]三星LPDDR5X DRAM獲高通驗證 能應用....</p></a>
+         <br>
+         <br>
+         <a href="https://news.samsung.com/tw/%e4%b8%89%e6%98%9f%e6%94%9c%e6%89%8bnetflix%e7%82%ba%e3%80%8a%e8%89%be%e8%9c%9c%e8%8e%89%e5%9c%a8%e5%b7%b4%e9%bb%8e%e3%80%8b%e7%ac%ac%e4%ba%8c%e5%ad%a3%e6%b3%a8%e5%85%a5%e7%b6%93%e5%85%b8%e9%a2%a8" target="_blank"><p>[新聞稿]三星攜手Netflix為《艾蜜莉在巴黎》第二季....</p></a>
+      </div>
    </div>
    
 
