--- a/20220901_homework_TsunganFu/20220901_homework.html
+++ b/20220901_homework_TsunganFu/20220901_homework.html
@@ -40,8 +40,8 @@
     
     .active{ background: #ff0000; }
 
-    #content1{ width: 100%; min-height:501px; background-color:#000000; position: relative; top:40px; }
-    #content1-left{ width:891px;float:left;margin-left:-100px}
+    #content1{ width: 100%; min-height:501px; background-color:#000000; position: relative; }
+    #content1-left{ width:891px;float:left;margin-left:150px;}
     #content1-right{ width:295px;background-color:#FFBF00;float:left;margin-left:30px}
 
     #content1-right-up img{
@@ -65,8 +65,7 @@
     #content1-right-up{ width:295px;min-height:167px;background-color:#000000;float:left;}
     #content1-right-center{ width:295px;min-height:167px;background-color:#000000;float:left;}
     #content1-right-down{ width:295px;min-height:167px;background-color:#000000;float:left;}
-
-    #logo2{ width:100%; min-height:140px;background-color:#F5F5F5;position: relative; top:40px; }
+    #logo2{ width:100%; min-height:140px;background-color:#F5F5F5;position: relative; }
     #logo2-1{ width:25.5%; border:1px dashed #ffffff; height: 120px;float:left;margin:10px;margin-left:-890px; }
     #logo2-2{ width:25.5%; border:1px dashed #ffffff; height: 120px;float:left;margin:10px;margin-left:-485px; }
     #logo2-2 span{
@@ -74,11 +73,11 @@
       margin-left: 100px;
     }
     #logo2-3{ width:25.5%; border:1px dashed #ffffff; height: 50px;float:left;margin:10px;margin-left:-80px;margin-top:70px; }
-    #content2{ width: 100%; min-height:420px; position: relative; top:40px;}
-    #content2-left{ width:26%; border:1px dashed #ffffff; height: 280px;float:left;margin:5px;margin-left:-890px;}
+    #content2{ width: 100%; min-height:450px; position: relative;top: -40px;}
+    #content2-left{ width:26%; border:1px dashed #000000; height: 280px;float:left;margin:1px;margin-left:150px;}
     #content2 img{width: 99%;}
-    #content2-center{ width:26%; border:1px dashed #ffffff; height: 300px;float:left;margin:5px;margin-left:-480px;}
-    #content2-right{ width:25%; border:1px dashed #ffffff; height: 375px;float:left;margin:5px;margin-left:-70px;}
+    #content2-center{ width:26%; border:1px dashed #000000; height: 300px;float:left;margin:1px;}
+    #content2-right{ width:25%; border:1px dashed #000000; height: 375px;float:left;margin:1px;}
    
    /* * 意思 是說 裡面html 的標籤都適用 */
    /* 輪播圖片style */
@@ -282,6 +281,7 @@
           <li><a href="https://www.samsung.com/tw/support/contact/#contactinfo" target="_blank">聯絡三星</a>
 
         </ul> 
+   </div>
 
    <div id="content1">
 
@@ -334,11 +334,11 @@
 
    <div id="content2">
       <div id="content2-left">
-         <a href="https://news.samsung.com/tw/%e4%b8%89%e6%98%9f%e6%9c%80%e8%a6%aa%e6%b0%915g%e6%96%b0%e6%a9%9f%ef%bc%81galaxy-m33-5g%e8%b6%85%e8%a6%8f%e8%b6%85%e5%80%bc%e9%87%8d%e7%a3%85%e4%b8%8a%e5%a0%b4" target="_blank"><img src="img/samsung news-1.jpg"</a>
+         <a href="https://news.samsung.com/tw/%e4%b8%89%e6%98%9f%e6%9c%80%e8%a6%aa%e6%b0%915g%e6%96%b0%e6%a9%9f%ef%bc%81galaxy-m33-5g%e8%b6%85%e8%a6%8f%e8%b6%85%e5%80%bc%e9%87%8d%e7%a3%85%e4%b8%8a%e5%a0%b4" target="_blank"><img src="img/samsung news-1.jpg"></a>
           <a href="https://news.samsung.com/tw/%e4%b8%89%e6%98%9f%e6%9c%80%e8%a6%aa%e6%b0%915g%e6%96%b0%e6%a9%9f%ef%bc%81galaxy-m33-5g%e8%b6%85%e8%a6%8f%e8%b6%85%e5%80%bc%e9%87%8d%e7%a3%85%e4%b8%8a%e5%a0%b4" target="_blank"><p>[新聞稿]<br>三星最親民5G新機！Galaxy M33 5G超規超值重磅上場</p></a>
       </div>
       <div id="content2-center">
-         <a href="https://news.samsung.com/tw/%e5%85%a8%e7%90%83%e9%a6%96%e6%ac%be55%e5%90%8b1000r%e8%b6%85%e5%a4%a7%e6%9b%b2%e9%9d%a2%e9%a1%af%e7%a4%ba%e5%99%a8-%e5%a5%a7%e5%be%b7%e8%b3%bdodyssey-ark%e5%88%b6%e9%9c%b8%e5%85%a8%e5%8f%b0%e9%9b%bb" target="_blank"><img src="img/samsung news-2.jpg"</a>
+         <a href="https://news.samsung.com/tw/%e5%85%a8%e7%90%83%e9%a6%96%e6%ac%be55%e5%90%8b1000r%e8%b6%85%e5%a4%a7%e6%9b%b2%e9%9d%a2%e9%a1%af%e7%a4%ba%e5%99%a8-%e5%a5%a7%e5%be%b7%e8%b3%bdodyssey-ark%e5%88%b6%e9%9c%b8%e5%85%a8%e5%8f%b0%e9%9b%bb" target="_blank"><img src="img/samsung news-2.jpg"></a>
           <a href="https://news.samsung.com/tw/%e5%85%a8%e7%90%83%e9%a6%96%e6%ac%be55%e5%90%8b1000r%e8%b6%85%e5%a4%a7%e6%9b%b2%e9%9d%a2%e9%a1%af%e7%a4%ba%e5%99%a8-%e5%a5%a7%e5%be%b7%e8%b3%bdodyssey-ark%e5%88%b6%e9%9c%b8%e5%85%a8%e5%8f%b0%e9%9b%bb" target="_blank"><p>[新聞稿]<br>全球首款55吋1000R超大曲面顯示器 奧德賽Odyssey Ark制霸全台電競戰場</p></a>
       </div>
       <div id="content2-right">
